old slurm/slurm-4908.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
In file included from src/direct_cuda_pattern.cc:1:
In file included from include/f/optimization/nonlinear/steepest_descent.hpp:4:
In file included from include/f/matrix/matrix.hpp:7:
include/f/matrix/impl/matrix_impl.hpp:149:67: error: no member named 'row' in 'std::__1::vector<f::matrix<unsigned long, 0, std::__1::allocator<unsigned long> >, std::__1::allocator<f::matrix<unsigned long, 0, std::__1::allocator<unsigned long> > > >'
        matrix( const Expression& expression ) : row_( expression.row() ), col_( expression.col() ), data_( storage_type( expression.row() * expression.col() ) )
                                                       ~~~~~~~~~~ ^
src/direct_cuda_pattern.cc:54:22: note: in instantiation of function template specialization 'f::matrix<unsigned long, 0, std::__1::allocator<unsigned long> >::matrix<std::__1::vector<f::matrix<unsigned long, 0, std::__1::allocator<unsigned long> >, std::__1::allocator<f::matrix<unsigned long, 0, std::__1::allocator<unsigned long> > > > >' requested here
std::cout<<"ar0 = "<<pt.ar<<std::endl;
                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
Merit: 1.16459e-05
ABS: 0.0222931
a is 
0	0.00024414000000000000371	-0	0.064142500000000005067	6.3790100000000002881e-09	0.0005930819999999999842	
-0	0.064142500000000005067	0	0.2849121099999999962	6.3790100000000002881e-09	0.0005930819999999999842	
-6.3790100000000002881e-09	0.0005930819999999999842	-6.3790100000000002881e-09	0.0005930819999999999842	0	-0.48144531000000001519	

max dim 9
thickness = (0,1)
ug_size = 25
tilt_size = 81
column_index = 0

real	0m0.821s
user	0m0.144s
sys	0m0.648s
